--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,18 +20,18 @@ android {
 
     buildTypes {
         debug {
-            buildConfigField "String", "BASE_URL", '"your base url"'
+            buildConfigField "String", "BASE_URL", '"https://coronavirus-monitor.p.rapidapi.com/coronavirus"'
         }
         release {
-            buildConfigField "String", "BASE_URL", '"your base url"'
+            buildConfigField "String", "BASE_URL", '"https://coronavirus-monitor.p.rapidapi.com/coronavirus"'
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     kapt
             {
-        generateStubs = true
-    }
+                generateStubs = true
+            }
 
     kotlinOptions {
         jvmTarget = "1.8"
@@ -64,7 +64,8 @@ dependencies {
     def multiDexVersion = '2.0.1'
     def retrofitVersion = '2.7.0'
     def fragmentVersion = '1.2.2'
-    def playServices= '17.0.0'
+    def playServices = '17.0.0'
+    def caligraphyVersion = "2.3.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -80,6 +81,7 @@ dependencies {
 
     implementation "androidx.activity:activity-ktx:$androidxActivity"
     implementation "androidx.fragment:fragment-ktx:$androidxFragment"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$androidxLifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidxLifecycle"
@@ -87,6 +89,9 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
+
+    //Material
+    implementation "com.google.android.material:material:1.1.0"
 
     // CoRoutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0'
@@ -142,6 +147,11 @@ dependencies {
 
     // Timber for Debugging / Logging
     implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    /**
+     * Calligraphy (custom font lib)
+     */
+    implementation "uk.co.chrisjenx:calligraphy:$caligraphyVersion"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
