--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.zaki.coronatracker"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -82,6 +82,7 @@ dependencies {
     implementation "androidx.activity:activity-ktx:$androidxActivity"
     implementation "androidx.fragment:fragment-ktx:$androidxFragment"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     debugImplementation "androidx.fragment:fragment-testing:$fragmentVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$androidxLifecycle"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$androidxLifecycle"
